--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -3,9 +3,6 @@ name: Linters
 on: pull_request
 
 env:
-  POSTGRES_USER: postgres
-  POSTGRES_PASSWORD: ''
-  POSTGRES_DB: postgres
   FORCE_COLOR: 1
 
 jobs:
@@ -45,22 +42,34 @@ jobs:
       - name: Check node_modules existence
         run: |
           if [ -d "node_modules/" ]; then echo -e "\e[1;31mThe node_modules/ folder was pushed to the repo. Please remove it from the GitHub repository and try again."; echo -e "\e[1;32mYou can set up a .gitignore file with this folder included on it to prevent this from happening in the future." && exit 1; fi
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Use Node 12
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+      - name: Install packages
+        run: yarn install --frozen-lockfile
+      - name: Run tests
+        run: yarn test
+      - name: Install Railway
+        run: npm i -g @railway/cli
+      - name: Deploy
+        run: railway up
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
   rspec-test:
     name: RSpec
-    needs: rubocop
+    needs: deploy
     runs-on: ubuntu-22.04
-    services:
-      postgres:
-        image: postgres:latest
-        ports:
-          - 5432:5432
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-ruby@v1
         with:
           ruby-version: 3.1.x
-      - name: Install postgres client
-        run: sudo apt-get install libpq-dev
       - name: Install dependencies
         run: |
           gem install bundler
@@ -70,4 +79,4 @@ jobs:
           bundler exec rails db:create RAILS_ENV=test
           bundler exec rails db:migrate RAILS_ENV=test
       - name: Run tests
-        run: bundler exec rake
+        run: bundle exec rspec spec
