Update github workflow environments

--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -4,6 +4,9 @@ on: pull_request
 
 env:
   FORCE_COLOR: 1
+  POSTGRES_USER: postgres
+  POSTGRES_PASSWORD: postgres
+  POSTGRES_DB: search_engine_analytics_test
 
 jobs:
   rubocop:
@@ -42,34 +45,25 @@ jobs:
       - name: Check node_modules existence
         run: |
           if [ -d "node_modules/" ]; then echo -e "\e[1;31mThe node_modules/ folder was pushed to the repo. Please remove it from the GitHub repository and try again."; echo -e "\e[1;32mYou can set up a .gitignore file with this folder included on it to prevent this from happening in the future." && exit 1; fi
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Use Node 12
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12.x
-      - name: Install packages
-        run: yarn install --frozen-lockfile
-      - name: Run tests
-        run: yarn test
-      - name: Install Railway
-        run: npm i -g @railway/cli
-      - name: Deploy
-        run: railway up
-        env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
   rspec-test:
     name: RSpec
-    needs: deploy
+    needs: rubocop
     runs-on: ubuntu-22.04
+    services:
+      postgres:
+        image: postgres:latest
+        ports:
+        - 5432:5432
+        env:
+          POSTGRES_USER: ${{ env.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-ruby@v1
         with:
           ruby-version: 3.1.x
+      - name: Install postgres client
+        run: sudo apt-get install libpq-dev
       - name: Install dependencies
         run: |
           gem install bundler
@@ -79,4 +73,4 @@ jobs:
           bundler exec rails db:create RAILS_ENV=test
           bundler exec rails db:migrate RAILS_ENV=test
       - name: Run tests
-        run: bundle exec rspec spec
+        run: bundler exec rspec spec/*
