--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -54,6 +54,7 @@ jobs:
         image: postgres:latest
         ports:
         - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
         env:
           POSTGRES_USER: ${{ env.POSTGRES_USER }}
           POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
