--- a/config/database.yml
+++ b/config/database.yml
@@ -62,6 +62,7 @@ test:
   username: <%= ENV["DATABASE_USERNAME"] %>
   password: <%= ENV["DATABASE_PASSWORD"] %>
   database: search_engine_analytics_test
+  host: localhost
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
