--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -4,8 +4,8 @@ on: pull_request
 
 env:
   FORCE_COLOR: 1
-  POSTGRES_USER: postgres
-  POSTGRES_PASSWORD: postgres
+  DATABASE_USERNAME: postgres
+  DATABASE_PASSWORD: postgres
   POSTGRES_DB: search_engine_analytics_test
 
 jobs:
@@ -56,8 +56,8 @@ jobs:
         - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
         env:
-          POSTGRES_USER: ${{ env.POSTGRES_USER }}
-          POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
+          POSTGRES_USER: ${{ env.DATABASE_USERNAME }}
+          POSTGRES_PASSWORD: ${{ env.DATABASE_PASSWORD }}
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-ruby@v1
